--- a/MyJava/.settings/org.eclipse.core.resources.prefs
+++ b/MyJava/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/tw/iii/matt/matt030906.java=UTF-8
+encoding//src/tw/iii/matt/matt031103.java=UTF-8
+encoding//src/tw/iii/matt/matt0311t4.java=UTF-8
